# learning_xs

./: CMakeLists.txt  README.md
Algorithm_test/: CMakeLists.txt  main.cpp
Algorithm_test/src/: Algorithm.cpp  Algorithm.h
Algorithm_test/src/cyber/: CyberMsg.cpp  CyberMsg.h  protobuffer.h
Algorithm_test/src/xscom_interface/: interface_xscom.cpp  interface_xscom.h
Algorithm_test/xsproto_include/: channeldefine.h  nmldefine.h  nodedefine.h
Algorithm_test/xsproto_include/base/: vehicle_extra_info.pb.h
Algorithm_test/xsproto_include/business/: data_collect_request.pb.h  fault_info.pb.h  localisation_init_response.pb.h  localisation_init_state.pb.h  map_sync_response.pb.h  mapper_response.pb.h  motion_cmd.pb.h  motion_control.pb.h  nec_control_request.pb.h  nec_control_response.pb.h  path_net_info.pb.h  remote_entity.pb.h  selfcheck.pb.h  sync_base.pb.h  sync_control.pb.h
Algorithm_test/xsproto_include/common/: common.h  common_definition.hh
Algorithm_test/xsproto_include/control/: control_command.pb.h
Algorithm_test/xsproto_include/globalpath/: task_list.pb.h  task_state_info.pb.h
Algorithm_test/xsproto_include/hdmap/: obstacle_map.pb.h
Algorithm_test/xsproto_include/perception/: beckon_info.pb.h  lidar_data.pb.h  mono_camera_data.pb.h  perception_object_info.pb.h  prediction.pb.h  radar_data.pb.h  radar_object_detector.pb.h  roadcurb_info.pb.h  sync_lidar_data.pb.h  sync_radar_camera_fusion_data.pb.h
Algorithm_test/xsproto_include/planner/: local_plan_state.pb.h  local_plan_voice.pb.h  vehicle_result_viewer.pb.h
Algorithm_test/xsproto_include/xsproto_include/base/: global_pose.pb.h  local_pose.pb.h  sys_data.pb.h  sys_info.pb.h
(+19 files in other folders)
